# prismatic-engine

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build-run.sh  build.sh  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: main.c.F9A25392F9D58E6A.idx  prismatic.h.1CCFA3A671B42BA7.idx
Source/: pdxinfo
Source/assets/fonts/: pixelsplitter.fnt
Source/assets/maps/Level_0/: Collision.csv  Floor.csv  data.json
src/: main.c
src/core/: customscenes.c  customscenes.h  game.c  game.h  test.c
src/core/scenes/: playscene.c  playscene.h  scenes.c  scenes.h  splashscene.c  splashscene.h  titlescene.c  titlescene.h
src/prismatic/: prismatic.c  prismatic.h
src/prismatic/logger/: logger.c  logger.h
src/prismatic/scene/: scene.c  scene.h
src/prismatic/sprite/: sprite.c  sprite.h
src/prismatic/state/: state.c  state.h  state_machine.c  state_machine.h
src/prismatic/text/: text.c  text.h
src/prismatic/tilemap/: ldtk.c  ldtk.h
src/prismatic/transition/: transition.c  transition.h
src/prismatic/utils/: utils.c  utils.h
